lucicfg/testdata/errors/double_emit.star
lucicfg.emit(
    dest = 'a.cfg',
    data = 'zzz',
)

lucicfg.emit(
    dest = 'a.cfg',
    data = 'zzz',
)

# Expect errors:
#
# Traceback (most recent call last):
#   //testdata/errors/double_emit.star:6: in <toplevel>
#   @stdlib//internal/lucicfg.star:176: in _emit
# Error: config file "a.cfg" is already generated by something else
